--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="header__image">
 
-          <img src="C:\Users\Admin\Downloads\Sakshi.jpg.jpg" alt="header" />
+          <img src="Sakshi.jpg" alt="header" />
 
         </div>
 
